--- a/Frontend/signup.html
+++ b/Frontend/signup.html
@@ -14,33 +14,42 @@
             <div id="crop"><img id="logo" src="../Images/Chatify logo.jpg" alt=""></div>
             <div><h2>Chatify</h2></div>
         </div>
-        <h1>First, enter your email</h1>
-        <p>We suggest using the email address you use at work.</p>
+        <h1>Join On Chatify</h1>
+        <p>Create your account by adding credentials</p>
         <br>
-            <div class="a">
-                <img class="auth" src="../Images/icons8-google-48.png" alt="">
-                <a href=""><h4 id="GoogleAuth">Continue with Google</h4></a>
-            </div>
+            <label style="margin-left: 50px;font-size: 18px;" for="">Name :</label>
             <br>
             <div class="a">
-                <img class="auth" src="../Images/icons8-github-48.png" alt="">
-                <a href="https://github.com/login/oauth/authorize?client_id=788dc52d02b18f43337b"><h4>Continue with Github</h4></a>
+                <input style="outline: none;border: none;" required type="text" id="name" placeholder="Enter your name">
             </div>
             <br>
+
+            <label style="margin-left: 50px;font-size: 18px;" for="">Email :</label>
             <br>
-            <h5>OR</h5>
+            <div class="a">
+                <input style="outline: none;border: none;" required type="text" id="email" placeholder="Enter your Email">
+            </div>
+            <br>
+            <label style="margin-left: 50px;font-size: 18px;" for="">Mobile No :</label>
+            <br>
+            <div class="a">
+                <input style="outline: none;border: none;" required type="text" id="mobile" placeholder="Enter your Mobile No.">
+            </div>
+            <br>
+            <label style="margin-left: 50px;font-size: 18px;" for="">Password :</label>
+            <br>
+            <div class="a">
+                <input style="outline: none;border: none;" required type="text" id="password" placeholder="Create password">
+            </div>
+            
             <br><br>
-            <input type="text" placeholder="Enter your email">
-            <br>
-            <input type="text" placeholder="Enter your password">
-            <br>
-            <a href="./chat.html"><button>Continue</button></a>
+            <button id="register">Register</button>
             
     </div>
     <br><br>
 <p>Already using chatify?</p>
 <br>
-<a href="./login.html"><p style="color: rgb(9, 118, 169);">Create Account</p>
+<a href="./login.html"><p style="color: rgb(9, 118, 169);">Login</p>
 </a></body>
 <script src="./scripts/signup.js"></script>
 </html>
