--- a/Frontend/channel.html
+++ b/Frontend/channel.html
@@ -45,12 +45,13 @@
                   <br>
                   <h1></h1>
                   <br>
-                 <button id="create">create channel</button>
+                 <button id="create" onclick="createChannel()" >create channel</button>
             
                 </div>
         </div>
     </div>
 
 </body>
+<script src="./scripts/channel.js"></script>
 
 </html>
