--- a/Frontend/createnewchannel..html
+++ b/Frontend/createnewchannel..html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="./image/WE CONNECT.png">
-    <link rel="stylesheet" href="./createnewchannel.css">
+    <link rel="stylesheet" href="./styles/createnewchannel.css">
     <title>Create-channel</title>
 </head>
 
