--- a/Frontend/main.html
+++ b/Frontend/main.html
@@ -158,7 +158,7 @@
               </span>
               <!-- <span id="addChannelIconText">Add Channel</span> -->
               <a href="./channel.html"><span id="addChannelIconText">Add Channel</span><h4 id="chnlname"></h4></a>
-              
+              <!-- updated by sahil -->
 
               <!-- Open Channel Modal -->
               <div id="myModal" class="modal">
