--- a/Frontend/login.html
+++ b/Frontend/login.html
@@ -19,7 +19,7 @@
         <br>
             <div class="a">
                 <img class="auth" src="../Images/icons8-google-48.png" alt="">
-                <a href=""><h4 id="GoogleAuth">Continue with Google</h4></a>
+                <a href="http://localhost:8090/auth/google"><h4 id="GoogleAuth">Continue with Google</h4></a>
             </div>
             <br>
             <div class="a">
