--- a/Frontend/main.html
+++ b/Frontend/main.html
@@ -56,7 +56,7 @@
           id="user_img"
           src="https://cdn.pixabay.com/photo/2012/04/13/21/07/user-33638__340.png"
         />
-        <button id="logout">Logout</button>
+        <button class="LgtBTN" id="logout">Logout</button>
       </div>
       <!-- The Modal -->
       <div id="mModal" class="mmodal">
@@ -264,6 +264,7 @@
       </section>
     </main>
   </body>
+  <script src="./scripts/main.js"></script>
 </html>
 
 <!-- <div class="message">
