--- a/Frontend/signup.html
+++ b/Frontend/signup.html
@@ -27,19 +27,19 @@
             <label style="margin-left: 50px;font-size: 18px;" for="">Email :</label>
             <br>
             <div class="a">
-                <input style="outline: none;border: none;" required type="text" id="email" placeholder="Enter your Email">
+                <input style="outline: none;border: none;" required type="email" id="email" placeholder="Enter your Email">
             </div>
             <br>
             <label style="margin-left: 50px;font-size: 18px;" for="">Mobile No :</label>
             <br>
             <div class="a">
-                <input style="outline: none;border: none;" required type="text" id="mobile" placeholder="Enter your Mobile No.">
+                <input style="outline: none;border: none;" required type="number" id="mobile" placeholder="Enter your Mobile No.">
             </div>
             <br>
             <label style="margin-left: 50px;font-size: 18px;" for="">Password :</label>
             <br>
             <div class="a">
-                <input style="outline: none;border: none;" required type="text" id="password" placeholder="Create password">
+                <input style="outline: none;border: none;" required type="password" id="password" placeholder="Create password">
             </div>
             
             <br><br>
