pull request done

--- a/Frontend/signup.html
+++ b/Frontend/signup.html
@@ -43,13 +43,11 @@
             </div>
             
             <br><br>
-            <a href="./main.html"><button id="register">Register</button></a>
-            
+            <a href="./main.html" style="text-decoration: none;"><button id="register">Register</button></a><br>
+            <p>Already using chatify? <a href="./login.html" style="text-decoration: none;"> Login</p>
+</a>
     </div>
     <br><br>
-<p>Already using chatify?</p>
-<br>
-<a href="./login.html"><p style="color: rgb(9, 118, 169);">Login</p>
-</a></body>
+</body>
 <script src="./scripts/signup.js"></script>
 </html>
