--- a/Frontend/login.html
+++ b/Frontend/login.html
@@ -18,12 +18,12 @@
         <p>We suggest using the email address you use at work.</p>
         <br>
             <div class="a">
-                <img class="auth" src="../icons8-google-48.png" alt="">
+                <img class="auth" src="./icons8-google-48.png" alt="">
                 <a href="http://localhost:8090/auth/google"><h4 id="GoogleAuth">Continue with Google</h4></a>
             </div>
             <br>
             <div class="a">
-                <img class="auth" src="../icons8-github-48.png" alt="">
+                <img class="auth" src="./icons8-github-48.png" alt="">
                 <a href="https://github.com/login/oauth/authorize?client_id=788dc52d02b18f43337b"><h4>Continue with Github</h4></a>
             </div>
             <br>
@@ -34,13 +34,12 @@
             <br>
             <input type="text" id="password" placeholder="Enter your password">
             <br>
-            <a href="./main.html"><button>Login</button></a>
-            
+            <a href="./main.html"><button>Login</button></a><br>
+            <p>Not using Chatify?
+            <a href="./signup.html"></a>Create Account</p>
+            </a>
     </div>
     <br><br>
-<p>Not using Chatify?</p>
-<br>
-<a href="./signup.html"><p style="color: rgb(9, 118, 169);">Create Account</p>
-</a></body>
+</body>
 <script src="./scripts/login.js"></script>
 </html>
