--- a/Frontend/channel.html
+++ b/Frontend/channel.html
@@ -13,9 +13,8 @@
 <body>
 
     <div class="box">
-        
         <a class="button" href="#newchannel">Create Channel </a>
-        <img src="../Images/Chatify logo.jpg" alt="">
+        <img src="./images/Chatify logo.jpg" alt="">
     </div>
 
     <div id="newchannel" class="overlay">
