--- a/Frontend/createworkspace.html
+++ b/Frontend/createworkspace.html
@@ -13,7 +13,7 @@
       <table>
         <tr>
           <td>
-            <img id="logo-image" src="../Images/Chatify logo.jpg" alt="" />
+            <img id="logo-image" src="./images/Chatify logo.jpg" alt="" />
           </td>
           <td><h1>Chatify</h1></td>
         </tr>
