--- a/Frontend/signup.html
+++ b/Frontend/signup.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="./styles/signup.css">
 </head>
 <body>
-<br><br><br><br><br>
+<br>
     <div id="form">
         <div id="main">
-            <div id="crop"><img id="logo" src="./Chatify logo.jpg" alt=""></div>
+            <div id="crop"><img id="logo" src="./images/Chatify logo.jpg" alt=""></div>
             <div><h2>Chatify</h2></div>
         </div>
         <h1>Join On Chatify</h1>
@@ -43,7 +43,7 @@
             </div>
             
             <br><br>
-            <a href="./main.html" style="text-decoration: none;"><button id="register">Register</button></a><br>
+            <button id="register">Register</button><br>
             <p>Already using chatify? <a href="./login.html" style="text-decoration: none;"> Login</p>
 </a>
     </div>
